# SophiaAgent

./: .env  .env.example  .gitignore  .mcp.json  Dockerfile  DLATEXTESTsophia-agent_latex_test_out.txt  LICENSE  PROJECT_REPORT.md  README.md  SOPHIA_ROADMAP.md  _latex_test_out.txt  cli.py  config.yaml  docker-compose.yml  e2e_verify.py  fix_docx.py  fix_docx_typing.py  fix_meta_analysis.py  fix_ppt.py  pyproject.toml  run_web.py  test_omml.docx  update_cli.py  update_config.py
.agents/plugins/: marketplace.json
.antigravitycli/: e183c7d5-e0de-461d-82c4-c3c93ba060df.json
.claude/commands/: sophia.md
.github/workflows/: ci.yml
docs/optimization/: Harness层优化方案-30B模型超越M2.5.md
plugins/sophia/: .mcp.json  notion_plugin.py  overleaf_plugin.py  zotero_plugin.py
sophia/: __init__.py  __main__.py  agent.py  autopilot.py  browser.py  cli.py  config.py  context.py  credentials.py  doctor.py  document_delivery.py  experiment.py  goal.py  guardrails.py  hooks.py  integrations.py  kanban.py  learning.py  lifecycle.py  loop.py  memory.py  paper_quality.py  paper_requirements.py  plugins.py  recovery.py  scheduler.py  security.py  session.py  snapshot.py  subagent.py  task_harness.py  trajectory.py  workspace_context.py
sophia/exporters/: __init__.py  docx_engine.py  docx_export.py  latex_export.py  omml_builder.py  pdf_export.py
sophia/pipeline/: __init__.py  assembler.py  loop.py
sophia/prompts/: __init__.py  system.py
sophia/providers/: __init__.py  base.py  (+3 more)
tests/: conftest.py  test_advisor.py  test_advisor_discovery_linkage.py  test_advisor_enhanced.py  test_autopilot.py  test_browser.py  test_chinese_nlp.py  test_citation_style_convert.py  test_coding_project.py  test_config.py  test_context.py  test_context_compression.py  test_credentials.py  test_data_collection.py  test_design_enhanced.py  test_discourse_and_narrative.py  test_discovery_builder.py  test_discovery_catalog.py  test_discovery_dependency.py  test_discovery_e2e_functional.py  test_discovery_e2e_integration.py  test_discovery_sandbox.py  test_discovery_searcher.py  test_doctor.py  test_document_delivery.py  test_docx_engine.py  test_e2e_research_workflow.py  test_empirical_workflow.py  test_ethics_support.py  test_experiment.py  test_goal.py  test_guardrails.py  test_hooks.py  test_integrations.py  test_interview_questionnaire.py  test_journal_cas_zones.py  test_journal_db.py  test_kanban.py  test_latex_exporter.py  test_learning.py  (+72 more)
(+132 files in other folders)
