[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sophia-agent"
version = "0.1.0"
description = "SophiaAgent -- AI research assistant for humanities and social sciences"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "jinja2>=3.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pandas>=2.0,<3",
    "numpy>=1.24",
    "matplotlib>=3.8",
    "python-docx>=1.1",
    "scipy>=1.10",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
cli = ["prompt_toolkit>=3.0", "rich>=13.0"]
web = ["fastapi>=0.111.0", "uvicorn>=0.30.0", "jinja2>=3.1"]
analysis = ["scipy>=1.10", "scikit-learn>=1.3", "seaborn>=0.13"]
export = ["python-docx>=1.1", "pylatex>=1.4"]
citation = ["bibtexparser>=1.4", "citeproc-py>=0.6"]
anthropic = ["anthropic>=0.30.0"]
nlp-cn = ["jieba>=0.42", "snownlp>=0.12", "gensim>=4.3", "bertopic>=0.16"]
data = [
    "pandas-datareader>=0.10",
    "wbgapi>=1.0",
    "akshare>=1.12",
    "trafilatura>=1.8",
]
ml = [
    "scikit-learn>=1.3",
    "xgboost>=1.7",
    "lightgbm>=4.0",
    "optuna>=3.0",
    "shap>=0.42",
]
advanced = [
    "pingouin>=0.5",
    "linearmodels>=5.0",
    "pyDOE3>=1.0",
    "factor_analyzer>=0.5",
    "networkx>=3.0",
    "flaml>=2.0",
    "vaderSentiment>=3.3",
    "pyvis>=0.3",
]
empirical = [
    "statsmodels>=0.14",
    "linearmodels>=5.0",
    "pyfixest>=0.28",
    "stargazer>=0.0.7",
    "missingno>=0.5",
    "tableone>=0.9",
    "lifelines>=0.28",
]
empirical-full = [
    "sophia-agent[empirical]",
    "rdrobust>=2.0",
    "rddensity>=2.4",
    "econml>=0.16",
    "causalml>=0.16",
    "doubleml>=0.9",
    "fairlearn>=0.10",
    "mapie>=0.9",
]
browser = ["playwright>=1.40"]
env = ["python-dotenv>=1.0"]
all = ["sophia-agent[cli,web,analysis,export,citation,anthropic,nlp-cn,data,ml,advanced,empirical,env,browser]"]
core = ["sophia-agent[cli,web,citation,env]"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
sophia = "sophia.__main__:main"

[tool.setuptools.packages.find]
include = ["sophia*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
